{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "0f440753-d820-4968-966a-3711c15445eb",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "01f109ef-9208-408a-a214-f22a2d426447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "459de3c6-b6d6-4a73-86b9-119d2c057d77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "10bb6a05-5778-45f7-af4a-4fa0d1c3a1ce",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "846b015d-065f-4d7f-a99a-6baab163f807",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}